feat: vehicle types service + docs
